Source/ISS/Development/NAMS/M9Concur/Vendor/Include/terM9.h

ViStatus _VI_FUNC terM9_fetchChannelSignature (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 signature);
ViStatus _VI_FUNC terM9_fetchDynamicChannelPinOpcode (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              _VI_FAR pinOpcodeBuffer[]);
ViStatus _VI_FUNC terM9_fetchDynamicPatternModifiers (ViSession vi, ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              _VI_FAR clocksPerPattern[], ViInt32 _VI_FAR
                              TSETIndex[], ViInt32 _VI_FAR controlOpcode[],
                              ViInt32 _VI_FAR controlCount[], ViInt32 _VI_FAR
                              controlCond[], ViBoolean _VI_FAR test[], ViBoolean
                              _VI_FAR failCapture[], ViBoolean _VI_FAR
                              resultCapture[], ViInt32 _VI_FAR PSETIndex[],
                              ViBoolean _VI_FAR step[], ViBoolean _VI_FAR
                              probeCapture[]);
ViStatus _VI_FUNC terM9_fetchStaticChannelPinState (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              _VI_FAR pinStateBuffer[]);
ViStatus _VI_FUNC terM9_getDMTXToPinConnect (ViSession vi, ViPInt32 scopeIndex);
ViStatus _VI_FUNC terM9_getDynamicPatternSetTimeout (ViSession vi, ViPReal64
                              timeout);
ViStatus _VI_FUNC terM9_getFrontPanelSyncConnect (ViSession vi, ViInt32
                              syncIndex, ViPInt32 connect);
ViStatus _VI_FUNC terM9_getFrontPanelSyncLogicSelect (ViSession vi, ViInt32
                              syncIndex, ViPInt32 logicSelect);
ViStatus _VI_FUNC terM9_getFrontPanelSyncPulseSelect (ViSession vi, ViInt32
                              syncIndex, ViPInt32 pulseGeneratorIndex);
ViStatus _VI_FUNC terM9_getFrontPanelSyncResource (ViSession vi, ViInt32
                              syncIndex, ViPInt32 logicSelect, ViPInt32
                              pulseGeneratorIndex, ViPInt32 connect);
ViStatus _VI_FUNC terM9_getGroundReference (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 groundReference);
ViStatus _VI_FUNC terM9_getHighVoltagePinGroup (ViSession vi, ViInt32
                              HVPinMaxCount, ViPInt32 HVPinCount, ViUInt32
                              _VI_FAR mode[]);
ViStatus _VI_FUNC terM9_getHighVoltagePinGroupSettings (ViSession vi, ViPReal64
                              threshold, ViInt32 HVPinMaxCount, ViPInt32
                              HVPinCount, ViUInt32 _VI_FAR mode[]);
ViStatus _VI_FUNC terM9_getHighVoltagePinGroupThreshold (ViSession vi, ViPReal64
                              threshold);
ViStatus _VI_FUNC terM9_getHighVoltagePinMode (ViSession vi, ViInt32 HVPinIndex,
                              ViPInt32 mode);
ViStatus _VI_FUNC terM9_getLowPower (ViSession vi, ViInt32 scopeIndex,
                              ViPBoolean state);
ViStatus _VI_FUNC terM9_getProbeMethod (ViSession vi, ViPInt32 probeMethod);
ViStatus _VI_FUNC terM9_getProbeTimingSet (ViSession vi, ViInt32 PSETIndex,
                              ViPReal64 openTime, ViPReal64 closeTime);
ViStatus _VI_FUNC terM9_getProbeTimingSetClose (ViSession vi, ViInt32 PSETIndex,
                              ViPReal64 closeTime);
ViStatus _VI_FUNC terM9_getProbeTimingSetOpen (ViSession vi, ViInt32 PSETIndex,
                              ViPReal64 openTime);
ViStatus _VI_FUNC terM9_getStaticPatternCount (ViSession vi, ViPInt32
                              patternCount);
ViStatus _VI_FUNC terM9_getStaticPatternDelay (ViSession vi, ViPReal64 delay);
ViStatus _VI_FUNC terM9_getStaticPatternProbeCapture (ViSession vi, ViPBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_getSyncResourcePulseWidth (ViSession vi, ViInt32
                              pulseGeneratorIndex, ViPReal64 pulseWidth);
ViStatus _VI_FUNC terM9_getSystemEnable (ViSession vi, ViPBoolean enable);
ViStatus _VI_FUNC terM9_getSystemTimingMode (ViSession vi, ViPInt32 timingMode);
ViStatus _VI_FUNC terM9_getUserClock (ViSession vi, ViInt32 userClockIndex,
                              ViPInt32 connect, ViPReal64 highVoltageLevel,
                              ViPReal64 lowVoltageLevel, ViPInt32 mode, ViInt32
                              phaseEntryMaxCount, ViPInt32 phaseEntryCount,
                              ViReal64 _VI_FAR phaseEntry[], ViPInt32 trigger);
ViStatus _VI_FUNC terM9_getUserClockConnect (ViSession vi, ViInt32
                              userClockIndex, ViPInt32 connect);
ViStatus _VI_FUNC terM9_getUserClockHighVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViPReal64 highVoltageLevel);
ViStatus _VI_FUNC terM9_getUserClockLowVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViPReal64 lowVoltageLevel);
ViStatus _VI_FUNC terM9_getUserClockMode (ViSession vi, ViInt32 userClockIndex,
                              ViPInt32 mode);
ViStatus _VI_FUNC terM9_getUserClockPhase (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 phaseEntryMaxCount, ViPInt32
                              phaseEntryCount, ViReal64 _VI_FAR phaseEntry[]);
ViStatus _VI_FUNC terM9_getUserClockPhaseAssert (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViPReal64
                              assertTime);
ViStatus _VI_FUNC terM9_getUserClockPhaseReturn (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViPReal64
                              returnTime);
ViStatus _VI_FUNC terM9_getUserClockTrigger (ViSession vi, ViInt32
                              userClockIndex, ViPInt32 trigger);
ViStatus _VI_FUNC terM9_initiateDynamicPatternSetExecution (ViSession vi);
ViStatus _VI_FUNC terM9_loadDynamicPattern (ViSession vi, ViBoolean step,
                              ViBoolean test);
ViStatus _VI_FUNC terM9_loadProbeExpectData (ViSession vi, ViInt32
                              expectDataCount, ViInt32 _VI_FAR expectData[]);
ViStatus _VI_FUNC terM9_loadProbeMapData (ViSession vi, ViInt32 mapDataCount,
                              ViInt32 _VI_FAR mapData[]);
ViStatus _VI_FUNC terM9_loadProbeTimingSetIndexes (ViSession vi, ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              _VI_FAR timingIndexes[], ViBoolean stepsOnly);
ViStatus _VI_FUNC terM9_modifyDynamicChannelPinOpcode (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              initialPatternIndex, ViInt32 patternCount, ViInt32
                              pinOpcodeBufferCount, ViInt32 _VI_FAR
                              pinOpcodeBuffer[]);
ViStatus _VI_FUNC terM9_prepareDynamicPatternSetExecution (ViSession vi,
                              ViBoolean expandLoops, ViBoolean stopOnFail,
                              ViBoolean stopOnEvent, ViBoolean stopOnProbe,
                              ViBoolean stopOnLSEQ, ViBoolean stopOnPattern,
                              ViInt32 stopOnPatternIndex, ViInt32 learnFlag,
                              ViInt32 preCountFlag, ViInt32 preCount, ViInt32
                              postCount);
ViStatus _VI_FUNC terM9_prepareDynamicProbeLoading (ViSession vi);
ViStatus _VI_FUNC terM9_prepareStaticProbeLoading (ViSession vi);
ViStatus _VI_FUNC terM9_runDynamicPatternSet (ViSession vi, ViBoolean
                              expandLoops, ViPInt32 patternSetResult);
ViStatus _VI_FUNC terM9_runStaticPattern (ViSession vi, ViBoolean step,
                              ViBoolean test);
ViStatus _VI_FUNC terM9_setDMTXToPinConnect (ViSession vi, ViInt32 scopeIndex);
ViStatus _VI_FUNC terM9_setDynamicPatternSetTimeout (ViSession vi, ViReal64
                              timeout);
ViStatus _VI_FUNC terM9_setFrontPanelSyncConnect (ViSession vi, ViInt32
                              syncIndex, ViInt32 connect);
ViStatus _VI_FUNC terM9_setFrontPanelSyncLogicSelect (ViSession vi, ViInt32
                              syncIndex, ViInt32 logicSelect);
ViStatus _VI_FUNC terM9_setFrontPanelSyncPulseSelect (ViSession vi, ViInt32
                              syncIndex, ViInt32 pulseGeneratorIndex);
ViStatus _VI_FUNC terM9_setFrontPanelSyncResource (ViSession vi, ViInt32
                              syncIndex, ViInt32 logicSelect, ViInt32
                              pulseGeneratorIndex, ViInt32 connect);
ViStatus _VI_FUNC terM9_setGroundReference (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 groundReference);
ViStatus _VI_FUNC terM9_setHighVoltagePinGroup (ViSession vi, ViInt32
                              HVPinCount, ViUInt32 _VI_FAR mode[]);
ViStatus _VI_FUNC terM9_setHighVoltagePinGroupSettings (ViSession vi, ViReal64
                              threshold, ViInt32 HVPinCount, ViUInt32 _VI_FAR
                              mode[]);
ViStatus _VI_FUNC terM9_setHighVoltagePinGroupThreshold (ViSession vi, ViReal64
                              threshold);
ViStatus _VI_FUNC terM9_setHighVoltagePinMode (ViSession vi, ViInt32 HVPinIndex,
                              ViInt32 mode);
ViStatus _VI_FUNC terM9_setLowPower (ViSession vi, ViInt32 scopeIndex, ViBoolean
                              state);
ViStatus _VI_FUNC terM9_setProbeMethod (ViSession vi, ViInt32 probeMethod);
ViStatus _VI_FUNC terM9_setProbeTimingSet (ViSession vi, ViInt32 PSETIndex,
                              ViReal64 openTime, ViReal64 closeTime);
ViStatus _VI_FUNC terM9_setProbeTimingSetClose (ViSession vi, ViInt32 PSETIndex,
                              ViReal64 closeTime);
ViStatus _VI_FUNC terM9_setProbeTimingSetOpen (ViSession vi, ViInt32 PSETIndex,
                              ViReal64 openTime);
ViStatus _VI_FUNC terM9_setStaticPatternDelay (ViSession vi, ViReal64 delay);
ViStatus _VI_FUNC terM9_setStaticPatternProbeCapture (ViSession vi, ViBoolean
                              probeCapture);
ViStatus _VI_FUNC terM9_setSyncResourcePulseWidth (ViSession vi, ViInt32
                              pulseGeneratorIndex, ViReal64 pulseWidth);
ViStatus _VI_FUNC terM9_setSystemEnable (ViSession vi, ViBoolean enable);
ViStatus _VI_FUNC terM9_setSystemTimingMode (ViSession vi, ViInt32 timingMode);
ViStatus _VI_FUNC terM9_setUserClock (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 connect, ViReal64 highVoltageLevel,
                              ViReal64 lowVoltageLevel, ViInt32 mode, ViInt32
                              phaseEntryCount, ViReal64 _VI_FAR phaseEntry[],
                              ViInt32 trigger);
ViStatus _VI_FUNC terM9_setUserClockConnect (ViSession vi, ViInt32
                              userClockIndex, ViInt32 connect);
ViStatus _VI_FUNC terM9_setUserClockHighVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViReal64 highVoltageLevel);
ViStatus _VI_FUNC terM9_setUserClockLowVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViReal64 lowVoltageLevel);
ViStatus _VI_FUNC terM9_setUserClockMode (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 mode);
ViStatus _VI_FUNC terM9_setUserClockPhase (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 phaseEntryCount, ViReal64 _VI_FAR
                              phaseEntry[]);
ViStatus _VI_FUNC terM9_setUserClockPhaseAssert (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViReal64
                              assertTime);
ViStatus _VI_FUNC terM9_setUserClockPhaseReturn (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViReal64
                              returnTime);
ViStatus _VI_FUNC terM9_setUserClockTrigger (ViSession vi, ViInt32
                              userClockIndex, ViInt32 trigger);
ViStatus _VI_FUNC terM9_stopDynamicPatternSetExecution (ViSession vi);
ViStatus _VI_FUNC terM9_waitForDynamicPatternSetExecution (ViSession vi);