Source/Core/Source/System/TPExec20120313/src/TERM9.BAS


Declare Function terM9_loadDynamicPattern Lib "terM9_32.dll" (ByVal vi As Long, ByVal step As Integer, ByVal test As Integer) As Long

Declare Function terM9_fetchDynamicChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal initPatternIdx As Long, ByVal patternCount As Long, pinOpcodeBuffer As Long) As Long

Declare Function terM9_modifyDynamicChannelPinOpcode Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, ByVal initPatternIdx As Long, ByVal patternCount As Long, ByVal pinOpcodeCount As Long, pinOpcodeBuffer As Long) As Long

Declare Function terM9_fetchDynamicPatternModifiers Lib "terM9_32.dll" (ByVal vi As Long, ByVal initPatternIdx As Long, ByVal patternCount As Long, clocksPerPattern As Long, TSETIdx As Long, controlOpcode As Long, controlCount As Long, controlCond As Long, test As Integer, failCapture As Integer, resultCapture As Integer, PSETIdx As Long, step As Integer, probeCapture As Integer) As Long

Declare Function terM9_getStaticPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Long, probeCapture As Integer) As Long

Declare Function terM9_getStaticPatternCount Lib "terM9_32.dll" (ByVal vi As Long, patternCount As Long) As Long

Declare Function terM9_setStaticPatternProbeCapture Lib "terM9_32.dll" (ByVal vi As Long, ByVal probeCapture As Integer) As Long

Declare Function terM9_fetchStaticChannelPinState Lib "terM9_32.dll" (ByVal vi As Long, ByVal pinListCount As Long, pinList As Long, pinStateBuffer As Long) As Long

Declare Function terM9_getProbeMethod Lib "terM9_32.dll" (ByVal vi As Long, probeMethod As Long) As Long

Declare Function terM9_setProbeMethod Lib "terM9_32.dll" (ByVal vi As Long, ByVal probeMethod As Long) As Long

Declare Function terM9_loadProbeExpectData Lib "terM9_32.dll" (ByVal vi As Long, ByVal expectDataCount As Long, expectData As Long) As Long

Declare Function terM9_loadProbeMapData Lib "terM9_32.dll" (ByVal vi As Long, ByVal mapDataCount As Long, mapData As Long) As Long

Declare Function terM9_loadProbeTimingSetIndexes Lib "terM9_32.dll" (ByVal vi As Long, ByVal initPatternIdx As Long, ByVal patternCount As Long, timingIndexes As Long, ByVal stepOnly As Integer) As Long

Declare Function terM9_prepareDynamicProbeLoading Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_getProbeTimingSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal PSETIdx As Long, openTime As Double, closeTime As Double) As Long

Declare Function terM9_getProbeTimingSetOpen Lib "terM9_32.dll" (ByVal vi As Long, ByVal PSETIdx As Long, openTime As Double) As Long

Declare Function terM9_getProbeTimingSetClose Lib "terM9_32.dll" (ByVal vi As Long, ByVal PSETIdx As Long, closeTime As Double) As Long

Declare Function terM9_setProbeTimingSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal PSETIdx As Long, ByVal openTime As Double, ByVal closeTime As Double) As Long

Declare Function terM9_setProbeTimingSetOpen Lib "terM9_32.dll" (ByVal vi As Long, ByVal PSETIdx As Long, ByVal openTime As Double) As Long

Declare Function terM9_setProbeTimingSetClose Lib "terM9_32.dll" (ByVal vi As Long, ByVal PSETIdx As Long, ByVal closeTime As Double) As Long

Declare Function terM9_prepareStaticProbeLoading Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_getHighVoltagePinGroupSettings Lib "terM9_32.dll" (ByVal vi As Long, threshold As Double, ByVal HVPinMaxCount As Long, HVPinCount As Long, mode As Long) As Long

Declare Function terM9_getHighVoltagePinGroup Lib "terM9_32.dll" (ByVal vi As Long, ByVal HVPinMaxCount As Long, HVPinCount As Long, mode As Long) As Long

Declare Function terM9_getHighVoltagePinMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal HVPinIdx As Long, mode As Long) As Long

Declare Function terM9_getHighVoltagePinGroupThreshold Lib "terM9_32.dll" (ByVal vi As Long, threshold As Double) As Long

Declare Function terM9_setHighVoltagePinGroupSettings Lib "terM9_32.dll" (ByVal vi As Long, ByVal threshold As Double, ByVal HVPinCount As Long, mode As Long) As Long

Declare Function terM9_setHighVoltagePinGroup Lib "terM9_32.dll" (ByVal vi As Long, ByVal HVPinCount As Long, mode As Long) As Long

Declare Function terM9_setHighVoltagePinMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal HVPinIdx As Long, ByVal mode As Long) As Long

Declare Function terM9_setHighVoltagePinGroupThreshold Lib "terM9_32.dll" (ByVal vi As Long, ByVal threshold As Double) As Long

Declare Function terM9_getFrontPanelSyncResource Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, logicSelect As Long, pulseGenIdx As Long, connect As Long) As Long

Declare Function terM9_getFrontPanelSyncLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, logicSelect As Long) As Long

Declare Function terM9_getFrontPanelSyncPulseSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, pulseGenIdx As Long) As Long

Declare Function terM9_getFrontPanelSyncConnect Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, connect As Long) As Long

Declare Function terM9_setFrontPanelSyncResource Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, ByVal logicSelect As Long, ByVal pulseGenIdx As Long, ByVal connect As Long) As Long

Declare Function terM9_setFrontPanelSyncLogicSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, ByVal logicSelect As Long) As Long

Declare Function terM9_setFrontPanelSyncPulseSelect Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, ByVal pulseGenIdx As Long) As Long

Declare Function terM9_setFrontPanelSyncConnect Lib "terM9_32.dll" (ByVal vi As Long, ByVal syncIdx As Long, ByVal connect As Long) As Long

Declare Function terM9_getSyncResourcePulseWidth Lib "terM9_32.dll" (ByVal vi As Long, ByVal pulseGenIdx As Long, pulseWidth As Double) As Long

Declare Function terM9_setSyncResourcePulseWidth Lib "terM9_32.dll" (ByVal vi As Long, ByVal pulseGenIdx As Long, ByVal pulseWidth As Double) As Long

Declare Function terM9_getUserClock Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, connect As Long, highVoltageLevel As Double, lowVoltageLevel As Double, mode As Long, ByVal phaseEntryMaxCount As Long, phaseEntryCount As Long, phaseEntry As Double, trigger As Long) As Long

Declare Function terM9_getUserClockConnect Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, connect As Long) As Long

Declare Function terM9_getUserClockMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, mode As Long) As Long

Declare Function terM9_getUserClockPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal phaseEntryMaxCount As Long, phaseEntryCount As Long, phaseEntry As Double) As Long

Declare Function terM9_getUserClockPhaseAssert Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal PhaseIdx As Long, assertTime As Double) As Long

Declare Function terM9_getUserClockPhaseReturn Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal PhaseIdx As Long, returnTime As Double) As Long

Declare Function terM9_getUserClockTrigger Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, trigger As Long) As Long

Declare Function terM9_getUserClockHighVoltageLevel Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, highVoltageLevel As Double) As Long

Declare Function terM9_getUserClockLowVoltageLevel Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, lowVoltageLevel As Double) As Long

Declare Function terM9_setUserClock Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal connect As Long, ByVal highVoltageLevel As Double, ByVal lowVoltageLevel As Double, ByVal mode As Long, ByVal phaseEntryCount As Long, phaseEntry As Double, ByVal trigger As Long) As Long

Declare Function terM9_setUserClockConnect Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal connect As Long) As Long

Declare Function terM9_setUserClockMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal mode As Long) As Long

Declare Function terM9_setUserClockPhase Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal phaseEntryCount As Long, phaseEntry As Double) As Long

Declare Function terM9_setUserClockPhaseAssert Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal PhaseIdx As Long, ByVal assertTime As Double) As Long

Declare Function terM9_setUserClockPhaseReturn Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal PhaseIdx As Long, ByVal returnTime As Double) As Long

Declare Function terM9_setUserClockTrigger Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal trigger As Long) As Long

Declare Function terM9_setUserClockHighVoltageLevel Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal highVoltageLevel As Double) As Long

Declare Function terM9_setUserClockLowVoltageLevel Lib "terM9_32.dll" (ByVal vi As Long, ByVal userClockIdx As Long, ByVal lowVoltageLevel As Double) As Long

Declare Function terM9_getSystemEnable Lib "terM9_32.dll" (ByVal vi As Long, enable As Integer) As Long

Declare Function terM9_setSystemEnable Lib "terM9_32.dll" (ByVal vi As Long, ByVal enable As Integer) As Long

Declare Function terM9_getDynamicPatternSetTimeout Lib "terM9_32.dll" (ByVal vi As Long, timeout As Double) As Long

Declare Function terM9_setDynamicPatternSetTimeout Lib "terM9_32.dll" (ByVal vi As Long, ByVal timeout As Double) As Long

Declare Function terM9_getStaticPatternDelay Lib "terM9_32.dll" (ByVal vi As Long, Delay As Double) As Long

Declare Function terM9_setStaticPatternDelay Lib "terM9_32.dll" (ByVal vi As Long, ByVal Delay As Double) As Long

Declare Function terM9_getGroundReference Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, groundReference As Long) As Long

Declare Function terM9_setGroundReference Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal groundReference As Long) As Long

Declare Function terM9_getSystemTimingMode Lib "terM9_32.dll" (ByVal vi As Long, timingMode As Long) As Long

Declare Function terM9_setSystemTimingMode Lib "terM9_32.dll" (ByVal vi As Long, ByVal timingMode As Long) As Long

Declare Function terM9_getLowPower Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, state As Integer) As Long

Declare Function terM9_setLowPower Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, ByVal state As Integer) As Long

Declare Function terM9_getDMTXToPinConnect Lib "terM9_32.dll" (ByVal vi As Long, scopeIdx As Long) As Long

Declare Function terM9_setDMTXToPinConnect Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long) As Long

Declare Function terM9_runDynamicPatternSet Lib "terM9_32.dll" (ByVal vi As Long, ByVal expandLoops As Integer, patternSetResult As Long) As Long

Declare Function terM9_prepareDynamicPatternSet Lib "terM9_32.dll" (ByVal vi As Long)

Declare Function terM9_prepareDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Long, ByVal expandLoops As Integer, ByVal stopOnFail As Integer, ByVal stopOnEvent As Integer, ByVal stopOnProbe As Integer, ByVal stopOnLSEQ As Integer, ByVal stopOnPattern As Integer, ByVal stopOnPatternIdx As Long, ByVal learnFlag As Long, ByVal preCountFlag As Long, ByVal preCount As Long, ByVal postCount As Long) As Long

Declare Function terM9_initiateDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_waitForDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_stopDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Long) As Long

Declare Function terM9_runStaticPattern Lib "terM9_32.dll" (ByVal vi As Long, ByVal step As Integer, ByVal test As Integer) As Long

Declare Function terM9_fetchChannelSignature Lib "terM9_32.dll" (ByVal vi As Long, ByVal scopeIdx As Long, SIG As Long) As Long
